--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="galeria">GALERIA</string>
     <string name="historia">HISTORIA</string>
     <string name="creado_por_sebasti_n_acevedo">Creado por Sebastián Acevedo</string>
+    <string name="title_activity_mapa">Mapa</string>
 </resources>
