--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,15 @@
     <string name="historia">HISTORIA</string>
     <string name="creado_por_sebasti_n_acevedo">Creado por Sebastián Acevedo</string>
     <string name="title_activity_mapa">Mapa</string>
+    <string name="ubicacion" />
+    <string name="title_activity_login">Login</string>
+    <string name="prompt_email">Correo</string>
+    <string name="prompt_password">Clave</string>
+    <string name="action_sign_in">Entrar</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Bienvenido"</string>
+    <string name="invalid_username">Ingresa solo tu nombre</string>
+    <string name="invalid_password">Ingresa tu clave</string>
+    <string name="login_failed">"Denuevo por favor"</string>
+    <string name="opiniones" > OPINIONES </string>/>
 </resources>
